# hc-tryorama-links-mini-example

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: node.js.yml
src/: index.ts
tests/: package-lock.json  package.json
tests/src/: index.ts
workdir/: dna.yaml
zomes/links-test/: Cargo.toml
zomes/links-test/src/: lib.rs
