[package]
name = "links-test"
version = "0.1.0"
authors = ["Nicolas Luck <nicolas@lucksus.eu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "links_test"

[dependencies]
derive_more = "0"
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

hdk = "0.0.104"
holo_hash = "0.0.5"
